--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "==3.1.*"
 djangorestframework = "==3.12.*"
 greenstalk = "*"
+environs = {extras = ["django"], version = "*"}
 
 [dev-packages]
 flake8 = "*"
