--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,3 +35,29 @@ services:
     environment:
       POSTGRES_USER: torznab
       POSTGRES_PASSWORD: torznab
+  listener:
+    image: torznab-listener:latest
+    build:
+      dockerfile: docker/Dockerfile
+      context: .
+    entrypoint: /opt/app/listener.py
+    user: 1000:1000
+    volumes:
+      - .:/opt/app
+    environment:
+      DJANGO_SETTINGS_MODULE: torznab.settings
+      BEANSTALKD_HOST: beanstalkd
+      DATABASE_URL: postgres://torznab:torznab@postgres:5432/torznab
+  api:
+    image: torznab-api:latest
+    build:
+      dockerfile: docker/Dockerfile
+      context: .
+    user: 1000:1000
+    ports:
+      - 8080:8080
+    volumes:
+      - .:/opt/app
+    environment:
+      DATABASE_URL: postgres://torznab:torznab@postgres:5432/torznab
+      DEBUG: "true"
