--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,6 @@ greenstalk = "*"
 environs = { extras = ["django"], version = "*" }
 psycopg2-binary = "*"
 uvicorn = "*"
-djangorestframework-xml = "*"
 
 [dev-packages]
 flake8 = "*"
@@ -18,6 +17,8 @@ black = "==20.8b1"
 bandit = "*"
 isort = "*"
 mypy = "*"
+pylint = "*"
+pytype = "*"
 
 [requires]
 python_version = "3.9"
