--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,14 @@ max-line-length = 88
 
 [pylint.messages_control]
 disable = C0330, C0326
+
+[mypy]
+python_version = 3.8
+plugins = mypy_django_plugin.main, mypy_drf_plugin.main
+files = torznab, api
+
+[mypy.plugins.django-stubs]
+django_settings_module = "torznab.settings"
+
+[mypy-*.migrations.*]
+ignore_errors = True
