--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ line_length = 88
 [flake8]
 max-line-length = 88
 extend-ignore = E203, W503
+exclude = .venv, .pytype, .mypy_cache, __pycache__
 
 [pylint]
 max-line-length = 88
