--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,43 +36,27 @@ cache-dependencies:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
 
-docker-build-api-master:
+docker-build-master:
   extends: .build-docker
   variables:
-    CI_REGISTRY_IMAGE: registry.gitlab.com/guillaumedsde/dht-crawler/api
+    CI_REGISTRY_IMAGE: registry.gitlab.com/guillaumedsde/dht-crawler
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE" . -f docker/Dockerfile --target api
-    - docker push "$CI_REGISTRY_IMAGE"
+    - docker build --pull -t "$CI_REGISTRY_IMAGE/api" . -f docker/Dockerfile --target api
+    - docker build --pull -t "$CI_REGISTRY_IMAGE/listener" . -f docker/Dockerfile --target listener
+    - docker push "$CI_REGISTRY_IMAGE/api"
+    - docker push "$CI_REGISTRY_IMAGE/listener"
   only:
     - master
 
-docker-build-api:
+docker-build:
   extends: .build-docker
   variables:
-    CI_REGISTRY_IMAGE: registry.gitlab.com/guillaumedsde/dht-crawler/api
+    CI_REGISTRY_IMAGE: registry.gitlab.com/guillaumedsde/dht-crawler
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG" . -f docker/Dockerfile --target api
-    - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
-  except:
-    - master
-
-docker-build-listener-master:
-  extends: .build-docker
-  variables:
-    CI_REGISTRY_IMAGE: registry.gitlab.com/guillaumedsde/dht-crawler/listener
-  script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE" . -f docker/Dockerfile --target listener
-    - docker push "$CI_REGISTRY_IMAGE"
-  only:
-    - master
-
-docker-build-listener:
-  extends: .build-docker
-  variables:
-    CI_REGISTRY_IMAGE: registry.gitlab.com/guillaumedsde/dht-crawler/listener
-  script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG" . -f docker/Dockerfile --target listener
-    - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
+    - docker build --pull -t "$CI_REGISTRY_IMAGE/api:$CI_COMMIT_REF_SLUG" . -f docker/Dockerfile --target api
+    - docker build --pull -t "$CI_REGISTRY_IMAGE/listener:$CI_COMMIT_REF_SLUG" . -f docker/Dockerfile --target listener
+    - docker push "$CI_REGISTRY_IMAGE/api:$CI_COMMIT_REF_SLUG"
+    - docker push "$CI_REGISTRY_IMAGE/listener:$CI_COMMIT_REF_SLUG"
   except:
     - master
 
