--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,36 +2,31 @@ ARG PYTHON_VERSION=3.8
 
 FROM python:${PYTHON_VERSION}-buster as build
 
-ENV PIPENV_VENV_IN_PROJECT="enabled"
-
 WORKDIR /opt/app
 
 RUN pip install --no-cache-dir pipenv==2020.11.15
 
 COPY Pipfile* ./
 
-FROM build as build-dev
+FROM build as dev
 
-RUN pipenv install --dev --deploy
-
-FROM python:${PYTHON_VERSION}-slim-buster as dev
-
-USER 1000
+RUN pipenv install --dev --deploy --system
 
 WORKDIR /opt/app
-
-COPY --chown=1000:1000 --from=build-dev /opt/app/.venv /opt/venv
 
 COPY --chown=1000:1000 . .
 
 RUN chmod 755 /opt/app/docker/entrypoint.sh /opt/app/listener.py
 
-ENV PATH="/opt/venv/bin:$PATH" \
-    PYTHONUNBUFFERED=1
+USER 1000
+
+ENV PYTHONUNBUFFERED=1
 
 ENTRYPOINT [ "/opt/app/docker/entrypoint.sh" ]
 
 FROM build as build-prod
+
+ARG PIPENV_VENV_IN_PROJECT="enabled"
 
 RUN pipenv install --deploy
 
