fix: don't import mypy drf plugins

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ disable = C0330, C0326
 
 [mypy]
 python_version = 3.8
-plugins = mypy_django_plugin.main, mypy_drf_plugin.main
+plugins = mypy_django_plugin.main
 files = torznab, api
 
 [mypy.plugins.django-stubs]
