feat: add adminer to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,3 +68,8 @@ services:
     environment:
       DATABASE_URL: postgres://torznab:torznab@postgres:5432/torznab
       DEBUG: "true"
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8000:8080
