--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,20 @@ django_settings_module = "torznab.settings"
 
 [mypy-*.migrations.*]
 ignore_errors = True
+
+[tool:pytest]
+minversion = 6.0
+addopts = -ra -q
+# testpaths =
+# tests
+# integration
+DJANGO_SETTINGS_MODULE = torznab.settings
+python_files = tests.py test_*.py *_tests.py
+
+[coverage:run]
+branch = True
+source=
+    api
+
+[coverage:xml]
+output=coverage.xml
