perf: use lxml instead of builtin etree

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ greenstalk = "*"
 environs = { extras = ["django"], version = "*" }
 psycopg2-binary = "*"
 uvicorn = "*"
+lxml = "*"
 
 [dev-packages]
 flake8 = "*"
