--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ environs = { extras = ["django"], version = "*" }
 psycopg2-binary = "*"
 uvicorn = "*"
 lxml = "*"
+djangorestframework = "*"
 
 [dev-packages]
 flake8 = "*"
