--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ include:
     PIPENV_VENV_IN_PROJECT: enabled
     PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
   before_script:
-    - if ! command -v pipenv &> /dev/null;then pip install pipenv==2020.11.15 ;fi
+    - pip install pipenv==2020.11.15
     - pipenv install --dev --deploy
     - export PATH="$CI_PROJECT_DIR/.venv/bin:$PATH"
   cache:
@@ -79,7 +79,6 @@ tests:
 code_quality:
   artifacts:
     paths: [gl-code-quality-report.json]
-
 
 .build-docker:
   # Official docker image.
