feat: pytype config

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,3 +62,14 @@ exclude_lines =
 
 [coverage:xml]
 output=coverage.xml
+
+[pytype]
+
+# Space-separated list of files or directories to process.
+inputs =
+    api
+    torznab
+    create_user.py
+
+# Python version (major.minor) of the target code.
+python_version = 3.8
