--- a/setup.cfg
+++ b/setup.cfg
@@ -70,7 +70,14 @@ output=coverage.xml
 inputs =
     api
     torznab
-    create_user.py
+
+exclude =
+    **/tests.py
+    **/migrations
+    **/manage.py
+    **/admin.py
+    **/wsgi.py
+    **/asgi.py
 
 # Python version (major.minor) of the target code.
 python_version = 3.8
