--- a/Pipfile
+++ b/Pipfile
@@ -30,6 +30,22 @@ django-coverage-plugin = "*"
 djangorestframework-stubs = "*"
 lxml-stubs = "*"
 django-silk = "*"
+flake8-bugbear = "*"
+flake8-django = "*"
+flake8-comprehensions = "*"
+flake8-mutable = "*"
+flake8-simplify = "*"
+flake8-variables-names = "*"
+pep8-naming = "*"
+flake8-cognitive-complexity = "*"
+flake8-functions = "*"
+flake8-expression-complexity = "*"
+flake8-use-fstring = "*"
+flake8-docstrings = "*"
+dlint = "*"
+flake8-pytest = "*"
+flake8-mock = "*"
+flake8-annotations = "*"
 
 [requires]
 python_version = "3.8"
