fix: ignore some flake8 quality checks

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ line_length = 88
 [flake8]
 max-line-length = 88
 extend-ignore = E203, W503
-ignore = D100, WPS305, Q000
+ignore = D100, WPS305, Q000, ANN101, DUO107, D105
 exclude = .venv, .pytype, .mypy_cache, __pycache__
 
 [pylint]
