--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ line_length = 88
 max-line-length = 88
 extend-ignore = E203, W503
 ignore = D100, WPS305, Q000, ANN101, DUO107, D105
-exclude = .venv, .pytype, .mypy_cache, __pycache__
+exclude = .venv, .pytype, .mypy_cache, __pycache__, tests.py, manage.py, apps.py, **/migrations/
 
 [pylint]
 max-line-length = 88
