--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 greenstalk = "2.0.0"
 sqlalchemy = { version = "2.0.12", extras = ["asyncio"] }
 asyncpg = "0.27.0"
+pydantic = "1.10.7"
 
 
 [tool.poetry.group.dev.dependencies]
