--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ greenstalk = "2.0.0"
 sqlalchemy = { version = "2.0.12", extras = ["asyncio"] }
 asyncpg = "0.27.0"
 pydantic = "1.10.7"
+sqlalchemy-utils = "0.41.1"
 
 
 [tool.poetry.group.dev.dependencies]
