--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,17 @@ sqlalchemy = { version = "2.0.12", extras = ["asyncio"] }
 asyncpg = "0.27.0"
 pydantic = "1.10.7"
 sqlalchemy-utils = "0.41.1"
+fastapi = "0.95.2"
+uvicorn = { version = "0.22.0", extras = ["standard"] }
+lxml = "4.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.0.265"
 mypy = "1.2.0"
 black = "23.3.0"
+lxml-stubs = "0.4.0"
+types-sqlalchemy-utils = "1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -47,8 +52,11 @@ line-length = 88
 
 target-version = "py311"
 
+[tool.ruff.per-file-ignores]
+
+"dht_torznab/api/torznab.py" = ["SLF001"]
 
 [tool.mypy]
 python_version = "3.11"
 strict = true
-plugins = ["sqlalchemy.ext.mypy.plugin"]
+plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
