--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{ include = "dht_torznab" }]
 [tool.poetry.dependencies]
 python = "^3.11"
 greenstalk = "2.0.0"
-sqlalchemy = { version = "2.0.12", extras = ["asyncio"] }
+sqlalchemy = { version = "2.0.13", extras = ["asyncio"] }
 asyncpg = "0.27.0"
 pydantic = "1.10.7"
 sqlalchemy-utils = "0.41.1"
@@ -20,7 +20,7 @@ lxml = "4.9.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.0.265"
-mypy = "1.2.0"
+mypy = "1.3.0"
 black = "23.3.0"
 lxml-stubs = "0.4.0"
 types-sqlalchemy-utils = "1.0.1"
@@ -59,4 +59,5 @@ target-version = "py311"
 [tool.mypy]
 python_version = "3.11"
 strict = true
+ignore_missing_imports = true
 plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
