--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,8 @@ target-version = "py311"
 [tool.ruff.per-file-ignores]
 "dht_torznab/api/torznab.py" = ["SLF001"]
 "dht_torznab/settings.py" = ["D106"]
-
+"dht_torznab/schemas.py" = ["A003"]
+"dht_torznab/models.py" = ["A003"]
 
 [tool.ruff.pydocstyle]
 convention = "google"
