--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ sqlalchemy-utils = "0.41.1"
 fastapi = "0.95.2"
 uvicorn = { version = "0.22.0", extras = ["standard"] }
 lxml = "4.9.2"
+gunicorn = "20.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
