--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 packages = [{ include = "dht_torznab" }]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.9"
 greenstalk = "2.0.0"
 sqlalchemy = { version = "2.0.13", extras = ["asyncio"] }
 asyncpg = "0.27.0"
@@ -17,6 +17,7 @@ fastapi = "0.95.2"
 uvicorn = { version = "0.22.0", extras = ["standard"] }
 lxml = "4.9.2"
 gunicorn = "20.1.0"
+aio-btdht = "0.0.9"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -53,7 +54,7 @@ src = ["dht_torznab"]
 # Same as Black.
 line-length = 88
 
-target-version = "py311"
+target-version = "py39"
 
 [tool.ruff.per-file-ignores]
 "dht_torznab/api/torznab.py" = ["SLF001"]
@@ -65,7 +66,7 @@ target-version = "py311"
 convention = "google"
 
 [tool.mypy]
-python_version = "3.11"
+python_version = "3.9"
 strict = true
 ignore_missing_imports = true
 plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
