--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ aio-btdht = "0.0.9"
 [tool.poetry.group.dev.dependencies]
 ruff = "0.0.270"
 mypy = "1.3.0"
+# NOTE: keep in sync with github action version
 black = "23.3.0"
 lxml-stubs = "0.4.0"
 types-sqlalchemy-utils = "1.0.1"
