--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,9 +1,20 @@
-name: GitHub Actions Demo
+name: Github Action Continuous Integration (CI) pipeline
 on:
   - push
 
 jobs:
-  mypy:
+  python-code-checks:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - check-name: ruff
+            check-command: ruff check --format github .
+          - check-name: black
+            check-command: black .
+          - check-name: mypy
+            check-command: mypy .
+    name: ${{ matrix.check-name }}
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
@@ -11,26 +22,4 @@ jobs:
         with:
           python-version-file: ".python-version"
           cache: 'poetry'
-      - run: mypy
-  # TODO DRY
-  ruff:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version-file: ".python-version"
-          cache: 'poetry'
-      - run: ruff check .
-        env:
-          RUFF_FORMAT: github
-  black:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: psf/black@stable
-        with:
-          src: "."
-          version: "23.3.0"
-
-
+      - run: ${{ matrix.check-command }}
