--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+      - run: pip install poetry==1.5.0
       - uses: actions/setup-python@v4
         with:
           python-version-file: ".python-version"
