--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -23,4 +23,5 @@ jobs:
         with:
           python-version-file: ".python-version"
           cache: 'poetry'
+      - run: poetry install --with dev
       - run: ${{ matrix.check-command }}
