ci: run check in venv

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -24,4 +24,4 @@ jobs:
           python-version-file: ".python-version"
           cache: 'poetry'
       - run: poetry install --with dev
-      - run: ${{ matrix.check-command }}
+      - run: poetry run ${{ matrix.check-command }}
