--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,9 @@ fastapi = "0.95.2"
 uvicorn = { version = "0.22.0", extras = ["standard"] }
 lxml = "4.9.2"
 gunicorn = "20.1.0"
+# NOTE: install from git since pypi packages are not up to date
 aio-btdht = { git = "https://github.com/bashkirtsevich-llc/aiobtdht.git", rev = "b98249b56514b59db1f49d981494da1bfd9a9ae3" }
-
+aio-krpc-server = { git = "https://github.com/bashkirtsevich-llc/aiokrpc.git", rev = "fe0b18a98d4dc19034f8152afbae78fb600830e2" }
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.0.270"
