--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to GitHub Container Registry
-        if: github.ref == '${{ github.event.repository.default_branch }}'
+        if: github.ref_name == github.event.repository.default_branch
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -49,10 +49,9 @@ jobs:
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
       - name: Build and Push
-        if: github.ref == '${{ github.event.repository.default_branch }}'
         uses: docker/build-push-action@v4
         with:
-          push: ${{ github.ref == github.event.repository.default_branch }}
+          push: ${{ github.ref_name == github.event.repository.default_branch }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64
