--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -30,12 +30,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to GitHub Container Registry
-        if: github.ref_name == github.event.repository.default_branch
+      - uses: docker/setup-buildx-action@v2
+      - if: github.ref_name == github.event.repository.default_branch
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -48,8 +44,7 @@ jobs:
             ghcr.io/${{ github.repository }}
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
-      - name: Build and Push
-        uses: docker/build-push-action@v4
+      - uses: docker/build-push-action@v4
         with:
           push: ${{ github.ref_name == github.event.repository.default_branch }}
           tags: ${{ steps.meta.outputs.tags }}
