--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,13 @@ target-version = "py311"
 [tool.ruff.pydocstyle]
 convention = "google"
 
+[tool.ruff.flake8-bugbear]
+extend-immutable-calls = [
+    "fastapi.Depends",
+    "fastapi.Query",
+    "fastapi.Security",
+]
+
 [tool.mypy]
 python_version = "3.11"
 strict = true
