--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ version: 2
 updates:
   - package-ecosystem: "pip"
     directory: "/"
+    dependency-type: "all"
     schedule:
       interval: "weekly"
   - package-ecosystem: "docker"
