--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -28,6 +28,8 @@ jobs:
       - run: poetry run ${{ matrix.check-command }}
   docker:
     runs-on: ubuntu-22.04
+    needs:
+      - python-code-checks
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
